--- a/src/index.html
+++ b/src/index.html
@@ -28,56 +28,56 @@
 				</div>
 			</div>
 			<div class="grid__cell grid__cell-c2-r2 grid__cell--padded">
-				<a href="https://twitter.com/codrops" class="oh"><span class="oh__inner">@codrops</span></a>
+				<!-- <a href="https://twitter.com/codrops" class="oh"><span class="oh__inner">@codrops</span></a> -->
 			</div>
 			<div class="grid__cell grid__cell-c1-r1">
 				<div class="grid__cell-img">
-					<div class="grid__cell-img-inner" style="background-image:url(img/1.jpg)" data-item="item-1"></div>
+					<div class="grid__cell-img-inner" style="background-image:url(img/hashtag_1.png)" data-item="item-1"></div>
 				</div>
 			</div>
 			<div class="grid__cell grid__cell-c3-r1">
 				<div class="grid__cell-img">
-					<div class="grid__cell-img-inner" style="background-image:url(img/2.jpg)" data-item="item-2"></div>
+					<div class="grid__cell-img-inner" style="background-image:url(img/hashtag_2.png)" data-item="item-2"></div>
 				</div>
 			</div>
 			<div class="grid__cell grid__cell-c4-r1">
 				<div class="grid__cell-img">
-					<div class="grid__cell-img-inner" style="background-image:url(img/3.jpg)" data-item="item-3"></div>
+					<div class="grid__cell-img-inner" style="background-image:url(img/hashtag_3.png)" data-item="item-3"></div>
 				</div>
 			</div>
 			<div class="grid__cell grid__cell-c1-r2">
 				<div class="grid__cell-img">
-					<div class="grid__cell-img-inner" style="background-image:url(img/4.jpg)" data-item="item-4"></div>
+					<div class="grid__cell-img-inner" style="background-image:url(img/hashtag_4.png)" data-item="item-4"></div>
 				</div>
 			</div>
 			<div class="grid__cell grid__cell-c3-r2">
 				<div class="grid__cell-img">
-					<div class="grid__cell-img-inner" style="background-image:url(img/5.jpg)" data-item="item-5"></div>
+					<div class="grid__cell-img-inner" style="background-image:url(img/hashtag_5.png)" data-item="item-5"></div>
 				</div>
 			</div>
 			<div class="grid__cell grid__cell-c2-r3">
 				<div class="grid__cell-img">
-					<div class="grid__cell-img-inner" style="background-image:url(img/6.jpg)" data-item="item-6"></div>
+					<div class="grid__cell-img-inner" style="background-image:url(img/hashtag_6.png)" data-item="item-6"></div>
 				</div>
 			</div>
 			<div class="grid__cell grid__cell-c4-r3">
 				<div class="grid__cell-img">
-					<div class="grid__cell-img-inner" style="background-image:url(img/7.jpg)" data-item="item-7"></div>
+					<div class="grid__cell-img-inner" style="background-image:url(img/hashtag_7.png)" data-item="item-7"></div>
 				</div>
 			</div>
 			<div class="grid__cell grid__cell-c1-r4">
 				<div class="grid__cell-img">
-					<div class="grid__cell-img-inner" style="background-image:url(img/8.jpg)" data-item="item-8"></div>
+					<div class="grid__cell-img-inner" style="background-image:url(img/hashtag_8.png)" data-item="item-8"></div>
 				</div>
 			</div>
 			<div class="grid__cell grid__cell-c3-r4">
 				<div class="grid__cell-img">
-					<div class="grid__cell-img-inner" style="background-image:url(img/9.jpg)" data-item="item-9"></div>
+					<div class="grid__cell-img-inner" style="background-image:url(img/hashtag_9.png)" data-item="item-9"></div>
 				</div>
 			</div>
 			<div class="grid__cell grid__cell-c3-r5">
 				<div class="grid__cell-img">
-					<div class="grid__cell-img-inner" style="background-image:url(img/10.jpg)" data-item="item-10"></div>
+					<div class="grid__cell-img-inner" style="background-image:url(img/hashtag_10.png)" data-item="item-10"></div>
 				</div>
 			</div>
 		</div>
@@ -208,52 +208,57 @@
 			<nav class="grid grid--mini">
 				<div class="grid__cell grid__cell-c1-r1">
 					<div class="grid__cell-img">
-						<div class="grid__cell-img-inner" style="background-image:url(img/1.jpg)"></div>
+						<div class="grid__cell-img-inner" style="background-image:url(img/hashtag_1.png)"></div>
 					</div>
 				</div>
 				<div class="grid__cell grid__cell-c3-r1">
 					<div class="grid__cell-img">
-						<div class="grid__cell-img-inner" style="background-image:url(img/2.jpg)"></div>
+						<div class="grid__cell-img-inner" style="background-image:url(img/hashtag_2.png)"></div>
 					</div>
 				</div>
 				<div class="grid__cell grid__cell-c4-r1">
 					<div class="grid__cell-img">
-						<div class="grid__cell-img-inner" style="background-image:url(img/3.jpg)"></div>
+						<div class="grid__cell-img-inner" style="background-image:url(img/hashtag_3.png)"></div>
 					</div>
 				</div>
 				<div class="grid__cell grid__cell-c1-r2">
 					<div class="grid__cell-img">
-						<div class="grid__cell-img-inner" style="background-image:url(img/4.jpg)"></div>
+						<div class="grid__cell-img-inner" style="background-image:url(img/hashtag_4.png)"></div>
 					</div>
 				</div>
 				<div class="grid__cell grid__cell-c3-r2">
 					<div class="grid__cell-img">
-						<div class="grid__cell-img-inner" style="background-image:url(img/5.jpg)"></div>
+						<div class="grid__cell-img-inner" style="background-image:url(img/hashtag_5.png)"></div>
 					</div>
 				</div>
 				<div class="grid__cell grid__cell-c2-r3">
 					<div class="grid__cell-img">
-						<div class="grid__cell-img-inner" style="background-image:url(img/6.jpg)"></div>
+						<div class="grid__cell-img-inner" style="background-image:url(img/hashtag_6.png)"></div>
 					</div>
 				</div>
 				<div class="grid__cell grid__cell-c4-r3">
 					<div class="grid__cell-img">
-						<div class="grid__cell-img-inner" style="background-image:url(img/7.jpg)"></div>
+						<div class="grid__cell-img-inner" style="background-image:url(img/hashtag_7.png)"></div>
 					</div>
 				</div>
 				<div class="grid__cell grid__cell-c1-r4">
 					<div class="grid__cell-img">
-						<div class="grid__cell-img-inner" style="background-image:url(img/8.jpg)"></div>
+						<div class="grid__cell-img-inner" style="background-image:url(img/hashtag_8.png)"></div>
 					</div>
 				</div>
 				<div class="grid__cell grid__cell-c3-r4">
 					<div class="grid__cell-img">
-						<div class="grid__cell-img-inner" style="background-image:url(img/9.jpg)"></div>
+						<div class="grid__cell-img-inner" style="background-image:url(img/hashtag_9.png)"></div>
 					</div>
 				</div>
 				<div class="grid__cell grid__cell-c3-r5">
 					<div class="grid__cell-img">
-						<div class="grid__cell-img-inner" style="background-image:url(img/10.jpg)"></div>
+						<div class="grid__cell-img-inner" style="background-image:url(img/hashtag_10.png)"></div>
+					</div>
+				</div>
+				<div class="grid__cell grid__cell-c3-r5">
+					<div class="grid__cell-img">
+						<div class="grid__cell-img-inner" style="background-image:url(img/hashtag_10.png)"></div>
 					</div>
 				</div>
 			</nav>
