--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="UTF-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>Grid Zoom | Codrops</title>
+	<title>Tai's Portfolio</title>
 	<meta name="description" content="" />
 	<meta name="keywords" content="" />
 	<meta name="author" content="Codrops" />
@@ -17,14 +17,19 @@
 <body class="loading">
 	<main>
 		<div class="grid grid--large">
-			<div class="grid__cell grid__cell-c4-r2 grid__cell--padded">
+			<div class="grid__cell grid__cell-c3-r2 grid__cell--padded">
 				<div class="frame">
-					<h1 class="frame__title oh"><span class="oh__inner">Grid Zoom Effect</span></h1>
-					<nav class="frame__links">
+					<p class="frame__title oh"><span class="oh__inner">How should we know a person without the education or work exprience?</span></p>
+					<!-- <nav class="frame__links">
 						<a href="" class="oh"><span class="oh__inner">Article</span></a>
 						<a href="https://tympanus.net/Development/ParanoiaSlideshow/" class="oh"><span class="oh__inner">Previous demo</span></a>
 						<a href="https://github.com/codrops/GridZoom/" class="oh"><span class="oh__inner">GitHub</span></a>
-					</nav>
+					</nav> -->
+				</div>
+			</div>
+			<div class="grid__cell grid__cell-c1-r3 grid__cell--padded">
+				<div class="frame" style="display: flex; justify-content: flex-end;">
+					<p class="frame__title oh" style="margin: 0 0; width: 99%;"><span class="oh__inner">There are 20 hashtags about my personalities, hobbies, preference, and lovely daily life.</span></p>
 				</div>
 			</div>
 			<div class="grid__cell grid__cell-c2-r2 grid__cell--padded">
@@ -50,7 +55,7 @@
 					<div class="grid__cell-img-inner" style="background-image:url(img/hashtag_4.png)" data-item="item-4"></div>
 				</div>
 			</div>
-			<div class="grid__cell grid__cell-c3-r2">
+			<div class="grid__cell grid__cell-c2-r2">
 				<div class="grid__cell-img">
 					<div class="grid__cell-img-inner" style="background-image:url(img/hashtag_5.png)" data-item="item-5"></div>
 				</div>
