--- a/src/index.html
+++ b/src/index.html
@@ -16,6 +16,18 @@
 
 <body class="loading">
 	<main>
+		<div class="side_bar_container">
+			<div class="side_bar_title_prop">Explore this page</div>
+			<div class="side_bar_contents_container">
+				<div class="side_bar_contents_emoji">⬇️</div>
+				<div class="side_bar_contents_text">Scroll</div>
+			</div>
+			<div class="side_bar_contents_container">
+				<div class="side_bar_contents_emoji">🐭</div>
+				<div class="side_bar_contents_text">Click</div>
+			</div>
+		</div>
+
 		<div class="grid grid--large">
 			<div class="grid__cell grid__cell-c3-r2 grid__cell--padded">
 				<div class="frame">
