adjust the grid

--- a/src/index.html
+++ b/src/index.html
@@ -16,34 +16,14 @@
 
 <body class="loading">
 	<main>
-		<div class="side_bar_container">
-			<div class="side_bar_title_prop">Explore this page</div>
-			<div class="side_bar_contents_container">
-				<div class="side_bar_contents_emoji">⬇️</div>
-				<div class="side_bar_contents_text">Scroll</div>
-			</div>
-			<div class="side_bar_contents_container">
-				<div class="side_bar_contents_emoji">🐭</div>
-				<div class="side_bar_contents_text">Click</div>
-			</div>
-		</div>
+		<!-- <div class -->
 
 		<div class="grid grid--large">
-			<div class="grid__cell grid__cell-c3-r2 grid__cell--padded">
+			<!-- <div class="grid__cell grid__cell-c3-r2 grid__cell--padded">
 				<div class="frame">
 					<p class="frame__title oh"><span class="oh__inner">How should we know a person without the education or work exprience?</span></p>
-					<!-- <nav class="frame__links">
-						<a href="" class="oh"><span class="oh__inner">Article</span></a>
-						<a href="https://tympanus.net/Development/ParanoiaSlideshow/" class="oh"><span class="oh__inner">Previous demo</span></a>
-						<a href="https://github.com/codrops/GridZoom/" class="oh"><span class="oh__inner">GitHub</span></a>
-					</nav> -->
 				</div>
-			</div>
-			<div class="grid__cell grid__cell-c1-r3 grid__cell--padded">
-				<div class="frame" style="display: flex; justify-content: flex-end;">
-					<p class="frame__title oh" style="margin: 0 0; width: 99%;"><span class="oh__inner">There are 20 hashtags about my personalities, hobbies, preference, and lovely daily life.</span></p>
-				</div>
-			</div>
+			</div> -->
 			<div class="grid__cell grid__cell-c2-r2 grid__cell--padded">
 				<!-- <a href="https://twitter.com/codrops" class="oh"><span class="oh__inner">@codrops</span></a> -->
 			</div>
@@ -57,6 +37,11 @@
 					<div class="grid__cell-img-inner" style="background-image:url(img/hashtag_2.png)" data-item="item-2"></div>
 				</div>
 			</div>
+			<div class="grid__cell grid__cell-c3-r2 grid__cell--padded">
+				<div class="frame">
+					<p class="frame__title oh"><span class="oh__inner">How should we know a person without the education or work exprience?</span></p>
+				</div>
+			</div>
 			<div class="grid__cell grid__cell-c4-r1">
 				<div class="grid__cell-img">
 					<div class="grid__cell-img-inner" style="background-image:url(img/hashtag_3.png)" data-item="item-3"></div>
@@ -65,6 +50,11 @@
 			<div class="grid__cell grid__cell-c1-r2">
 				<div class="grid__cell-img">
 					<div class="grid__cell-img-inner" style="background-image:url(img/hashtag_4.png)" data-item="item-4"></div>
+				</div>
+			</div>
+			<div class="grid__cell grid__cell-c1-r3 grid__cell--padded">
+				<div class="frame" style="display: flex; justify-content: flex-end;">
+					<p class="frame__title oh" style="margin: 0 0; width: 99%;"><span class="oh__inner">There are 20 hashtags about my personalities, hobbies, preference, and lovely daily life.</span></p>
 				</div>
 			</div>
 			<div class="grid__cell grid__cell-c2-r2">
@@ -97,9 +87,24 @@
 					<div class="grid__cell-img-inner" style="background-image:url(img/hashtag_10.png)" data-item="item-10"></div>
 				</div>
 			</div>
+			<div class="grid__cell grid__cell-c1-r3 grid__cell--padded">
+				<div class="frame" style="display: flex; justify-content: flex-end;">
+					<p class="frame__title oh" style="margin: 0 0; width: 99%;"><span class="oh__inner"></span></p>
+				</div>
+			</div>
+			<div class="grid__cell grid__cell-c1-r3 grid__cell--padded">
+				<div class="frame" style="display: flex; justify-content: flex-end;">
+					<p class="frame__title oh" style="margin: 0 0; width: 99%;"><span class="oh__inner"></span></p>
+				</div>
+			</div>
 			<div class="grid__cell grid__cell-c4-r4">
 				<div class="grid__cell-img">
 					<div class="grid__cell-img-inner" style="background-image:url(img/hashtag_11.png)" data-item="item-10"></div>
+				</div>
+			</div>
+			<div class="grid__cell grid__cell-c1-r3 grid__cell--padded">
+				<div class="frame" style="display: flex; justify-content: flex-end;">
+					<p class="frame__title oh" style="margin: 0 0; width: 99%;"><span class="oh__inner"></span></p>
 				</div>
 			</div>
 			<div class="grid__cell grid__cell-c1-r5">
@@ -123,6 +128,16 @@
 					<div class="grid__cell-img-inner" style="background-image:url(img/hashtag_15.png)" data-item="item-10"></div>
 				</div>
 			</div>
+			<div class="grid__cell grid__cell-c1-r3 grid__cell--padded">
+				<div class="frame" style="display: flex; justify-content: flex-end;">
+					<p class="frame__title oh" style="margin: 0 0; width: 99%;"><span class="oh__inner"></span></p>
+				</div>
+			</div>
+			<div class="grid__cell grid__cell-c1-r3 grid__cell--padded">
+				<div class="frame" style="display: flex; justify-content: flex-end;">
+					<p class="frame__title oh" style="margin: 0 0; width: 99%;"><span class="oh__inner"></span></p>
+				</div>
+			</div>
 			<div class="grid__cell grid__cell-c2-r6">
 				<div class="grid__cell-img">
 					<div class="grid__cell-img-inner" style="background-image:url(img/hashtag_16.png)" data-item="item-10"></div>
@@ -133,9 +148,19 @@
 					<div class="grid__cell-img-inner" style="background-image:url(img/hashtag_17.png)" data-item="item-10"></div>
 				</div>
 			</div>
+			<div class="grid__cell grid__cell-c1-r3 grid__cell--padded">
+				<div class="frame" style="display: flex; justify-content: flex-end;">
+					<p class="frame__title oh" style="margin: 0 0; width: 99%;"><span class="oh__inner"></span></p>
+				</div>
+			</div>
 			<div class="grid__cell grid__cell-c2-r7">
 				<div class="grid__cell-img">
 					<div class="grid__cell-img-inner" style="background-image:url(img/hashtag_18.png)" data-item="item-10"></div>
+				</div>
+			</div>
+			<div class="grid__cell grid__cell-c1-r3 grid__cell--padded">
+				<div class="frame" style="display: flex; justify-content: flex-end;">
+					<p class="frame__title oh" style="margin: 0 0; width: 99%;"><span class="oh__inner"></span></p>
 				</div>
 			</div>
 			<div class="grid__cell grid__cell-c3-r7">
