fix the mobile view of hashtag page

--- a/src/index.html
+++ b/src/index.html
@@ -148,21 +148,21 @@
 					<div class="grid__cell-img-inner" style="background-image:url(img/hashtag_17.png)" data-item="item-10"></div>
 				</div>
 			</div>
-			<div class="grid__cell grid__cell-c1-r3 grid__cell--padded">
+			<!-- <div class="grid__cell grid__cell-c1-r3 grid__cell--padded">
 				<div class="frame" style="display: flex; justify-content: flex-end;">
 					<p class="frame__title oh" style="margin: 0 0; width: 99%;"><span class="oh__inner"></span></p>
 				</div>
-			</div>
+			</div> -->
 			<div class="grid__cell grid__cell-c2-r7">
 				<div class="grid__cell-img">
 					<div class="grid__cell-img-inner" style="background-image:url(img/hashtag_18.png)" data-item="item-10"></div>
 				</div>
 			</div>
-			<div class="grid__cell grid__cell-c1-r3 grid__cell--padded">
+			<!-- <div class="grid__cell grid__cell-c1-r3 grid__cell--padded">
 				<div class="frame" style="display: flex; justify-content: flex-end;">
 					<p class="frame__title oh" style="margin: 0 0; width: 99%;"><span class="oh__inner"></span></p>
 				</div>
-			</div>
+			</div> -->
 			<div class="grid__cell grid__cell-c3-r7">
 				<div class="grid__cell-img">
 					<div class="grid__cell-img-inner" style="background-image:url(img/hashtag_19.png)" data-item="item-10"></div>
