add color to title of hashtags

--- a/src/index.html
+++ b/src/index.html
@@ -177,15 +177,15 @@
 		</div>
 		<div class="content">
 			<div class="content__item" id="item-1">
-				<span class="content__item-number oh"><span class="oh__inner">01</span></span>
-				<h2 class="content__item-heading oh"><span class="oh__inner">Masses</span></h2>
+				<span class="content__item-number oh"><span class="oh__inner">1</span></span>
+				<h2 class="content__item-heading oh"><span class="oh__inner">#シェアハウス5年目</span></h2>
 				<p class="content__item-text">
 					The instruments by which public opinion is organized and focused may be misused. But such organization and focusing are necessary to orderly life.
 				</p>
 				<a class="content__item-link oh"><span class="oh__inner">View more</span></a>
 				<nav class="slide-nav">
-					<div class="slide-nav__img slide-nav__img--prev" style="background-image:url(img/11.jpg);"></div>
-					<div class="slide-nav__img slide-nav__img--next" style="background-image:url(img/12.jpg);"></div>
+					<div class="slide-nav__img slide-nav__img--prev" style="background-image:url(img/hashtag_20.png);"></div>
+					<div class="slide-nav__img slide-nav__img--next" style="background-image:url(img/hashtag_2.png);"></div>
 				</nav>
 			</div>
 			<div class="content__item" id="item-2">
@@ -196,8 +196,8 @@
 				</p>
 				<a class="content__item-link oh"><span class="oh__inner">View more</span></a>
 				<nav class="slide-nav">
-					<div class="slide-nav__img slide-nav__img--prev" style="background-image:url(img/13.jpg);"></div>
-					<div class="slide-nav__img slide-nav__img--next" style="background-image:url(img/14.jpg);"></div>
+					<div class="slide-nav__img slide-nav__img--prev" style="background-image:url(img/hashtag_1.png);"></div>
+					<div class="slide-nav__img slide-nav__img--next" style="background-image:url(img/hashtag_3.png);"></div>
 				</nav>
 			</div>
 			<div class="content__item" id="item-3">
@@ -208,8 +208,8 @@
 				</p>
 				<a class="content__item-link oh"><span class="oh__inner">View more</span></a>
 				<nav class="slide-nav">
-					<div class="slide-nav__img slide-nav__img--prev" style="background-image:url(img/15.jpg);"></div>
-					<div class="slide-nav__img slide-nav__img--next" style="background-image:url(img/16.jpg);"></div>
+					<div class="slide-nav__img slide-nav__img--prev" style="background-image:url(img/hashtag_2.png);"></div>
+					<div class="slide-nav__img slide-nav__img--next" style="background-image:url(img/hashtag_4.png);"></div>
 				</nav>
 			</div>
 			<div class="content__item" id="item-4">
@@ -220,8 +220,8 @@
 				</p>
 				<a class="content__item-link oh"><span class="oh__inner">View more</span></a>
 				<nav class="slide-nav">
-					<div class="slide-nav__img slide-nav__img--prev" style="background-image:url(img/17.jpg);"></div>
-					<div class="slide-nav__img slide-nav__img--next" style="background-image:url(img/18.jpg);"></div>
+					<div class="slide-nav__img slide-nav__img--prev" style="background-image:url(img/hashtag_3.png);"></div>
+					<div class="slide-nav__img slide-nav__img--next" style="background-image:url(img/hashtag_5.png);"></div>
 				</nav>
 			</div>
 			<div class="content__item" id="item-5">
@@ -232,8 +232,8 @@
 				</p>
 				<a class="content__item-link oh"><span class="oh__inner">View more</span></a>
 				<nav class="slide-nav">
-					<div class="slide-nav__img slide-nav__img--prev" style="background-image:url(img/19.jpg);"></div>
-					<div class="slide-nav__img slide-nav__img--next" style="background-image:url(img/20.jpg);"></div>
+					<div class="slide-nav__img slide-nav__img--prev" style="background-image:url(img/hashtag_4.png);"></div>
+					<div class="slide-nav__img slide-nav__img--next" style="background-image:url(img/hashtag_6.png);"></div>
 				</nav>
 			</div>
 			<div class="content__item" id="item-6">
@@ -244,8 +244,8 @@
 				</p>
 				<a class="content__item-link oh"><span class="oh__inner">View more</span></a>
 				<nav class="slide-nav">
-					<div class="slide-nav__img slide-nav__img--prev" style="background-image:url(img/21.jpg);"></div>
-					<div class="slide-nav__img slide-nav__img--next" style="background-image:url(img/22.jpg);"></div>
+					<div class="slide-nav__img slide-nav__img--prev" style="background-image:url(img/hashtag_5.png);"></div>
+					<div class="slide-nav__img slide-nav__img--next" style="background-image:url(img/hashtag_7.png);"></div>
 				</nav>
 			</div>
 			<div class="content__item" id="item-7">
@@ -256,8 +256,8 @@
 				</p>
 				<a class="content__item-link oh"><span class="oh__inner">View more</span></a>
 				<nav class="slide-nav">
-					<div class="slide-nav__img slide-nav__img--prev" style="background-image:url(img/29.jpg);"></div>
-					<div class="slide-nav__img slide-nav__img--next" style="background-image:url(img/30.jpg);"></div>
+					<div class="slide-nav__img slide-nav__img--prev" style="background-image:url(img/hashtag_6.png);"></div>
+					<div class="slide-nav__img slide-nav__img--next" style="background-image:url(img/hashtag_8.png);"></div>
 				</nav>
 			</div>
 			<div class="content__item" id="item-8">
@@ -268,8 +268,8 @@
 				</p>
 				<a class="content__item-link oh"><span class="oh__inner">View more</span></a>
 				<nav class="slide-nav">
-					<div class="slide-nav__img slide-nav__img--prev" style="background-image:url(img/23.jpg);"></div>
-					<div class="slide-nav__img slide-nav__img--next" style="background-image:url(img/24.jpg);"></div>
+					<div class="slide-nav__img slide-nav__img--prev" style="background-image:url(img/hashtag_7.png);"></div>
+					<div class="slide-nav__img slide-nav__img--next" style="background-image:url(img/hashtag_9.png);"></div>
 				</nav>
 			</div>
 			<div class="content__item" id="item-9">
@@ -280,8 +280,8 @@
 				</p>
 				<a class="content__item-link oh"><span class="oh__inner">View more</span></a>
 				<nav class="slide-nav">
-					<div class="slide-nav__img slide-nav__img--prev" style="background-image:url(img/25.jpg);"></div>
-					<div class="slide-nav__img slide-nav__img--next" style="background-image:url(img/26.jpg);"></div>
+					<div class="slide-nav__img slide-nav__img--prev" style="background-image:url(img/hashtag_8.png);"></div>
+					<div class="slide-nav__img slide-nav__img--next" style="background-image:url(img/hashtag_10.png);"></div>
 				</nav>
 			</div>
 			<div class="content__item" id="item-10">
@@ -292,8 +292,8 @@
 				</p>
 				<a class="content__item-link oh"><span class="oh__inner">View more</span></a>
 				<nav class="slide-nav">
-					<div class="slide-nav__img slide-nav__img--prev" style="background-image:url(img/27.jpg);"></div>
-					<div class="slide-nav__img slide-nav__img--next" style="background-image:url(img/28.jpg);"></div>
+					<div class="slide-nav__img slide-nav__img--prev" style="background-image:url(img/hashtag_9.png);"></div>
+					<div class="slide-nav__img slide-nav__img--next" style="background-image:url(img/hashtag_11.png);"></div>
 				</nav>
 			</div>
 			<div class="content__item" id="item-11">
@@ -304,8 +304,8 @@
 				</p>
 				<a class="content__item-link oh"><span class="oh__inner">View more</span></a>
 				<nav class="slide-nav">
-					<div class="slide-nav__img slide-nav__img--prev" style="background-image:url(img/27.jpg);"></div>
-					<div class="slide-nav__img slide-nav__img--next" style="background-image:url(img/28.jpg);"></div>
+					<div class="slide-nav__img slide-nav__img--prev" style="background-image:url(img/hashtag_10.png);"></div>
+					<div class="slide-nav__img slide-nav__img--next" style="background-image:url(img/hashtag_12.png);"></div>
 				</nav>
 			</div>
 			<div class="content__item" id="item-12">
@@ -316,8 +316,8 @@
 				</p>
 				<a class="content__item-link oh"><span class="oh__inner">View more</span></a>
 				<nav class="slide-nav">
-					<div class="slide-nav__img slide-nav__img--prev" style="background-image:url(img/27.jpg);"></div>
-					<div class="slide-nav__img slide-nav__img--next" style="background-image:url(img/28.jpg);"></div>
+					<div class="slide-nav__img slide-nav__img--prev" style="background-image:url(img/hashtag_11.png);"></div>
+					<div class="slide-nav__img slide-nav__img--next" style="background-image:url(img/hashtag_13.png);"></div>
 				</nav>
 			</div>
 			<div class="content__item" id="item-13">
@@ -328,8 +328,8 @@
 				</p>
 				<a class="content__item-link oh"><span class="oh__inner">View more</span></a>
 				<nav class="slide-nav">
-					<div class="slide-nav__img slide-nav__img--prev" style="background-image:url(img/27.jpg);"></div>
-					<div class="slide-nav__img slide-nav__img--next" style="background-image:url(img/28.jpg);"></div>
+					<div class="slide-nav__img slide-nav__img--prev" style="background-image:url(img/hashtag_12.png);"></div>
+					<div class="slide-nav__img slide-nav__img--next" style="background-image:url(img/hashtag_14.png);"></div>
 				</nav>
 			</div>
 			<div class="content__item" id="item-14">
@@ -340,8 +340,8 @@
 				</p>
 				<a class="content__item-link oh"><span class="oh__inner">View more</span></a>
 				<nav class="slide-nav">
-					<div class="slide-nav__img slide-nav__img--prev" style="background-image:url(img/27.jpg);"></div>
-					<div class="slide-nav__img slide-nav__img--next" style="background-image:url(img/28.jpg);"></div>
+					<div class="slide-nav__img slide-nav__img--prev" style="background-image:url(img/hashtag_13.png);"></div>
+					<div class="slide-nav__img slide-nav__img--next" style="background-image:url(img/hashtag_15.png);"></div>
 				</nav>
 			</div>
 			<div class="content__item" id="item-15">
@@ -352,8 +352,8 @@
 				</p>
 				<a class="content__item-link oh"><span class="oh__inner">View more</span></a>
 				<nav class="slide-nav">
-					<div class="slide-nav__img slide-nav__img--prev" style="background-image:url(img/27.jpg);"></div>
-					<div class="slide-nav__img slide-nav__img--next" style="background-image:url(img/28.jpg);"></div>
+					<div class="slide-nav__img slide-nav__img--prev" style="background-image:url(img/hashtag_14.png);"></div>
+					<div class="slide-nav__img slide-nav__img--next" style="background-image:url(img/hashtag_16.png);"></div>
 				</nav>
 			</div>
 			<div class="content__item" id="item-16">
@@ -364,8 +364,8 @@
 				</p>
 				<a class="content__item-link oh"><span class="oh__inner">View more</span></a>
 				<nav class="slide-nav">
-					<div class="slide-nav__img slide-nav__img--prev" style="background-image:url(img/27.jpg);"></div>
-					<div class="slide-nav__img slide-nav__img--next" style="background-image:url(img/28.jpg);"></div>
+					<div class="slide-nav__img slide-nav__img--prev" style="background-image:url(img/hashtag_15.png);"></div>
+					<div class="slide-nav__img slide-nav__img--next" style="background-image:url(img/hashtag_17.png);"></div>
 				</nav>
 			</div>
 			<div class="content__item" id="item-17">
@@ -376,8 +376,8 @@
 				</p>
 				<a class="content__item-link oh"><span class="oh__inner">View more</span></a>
 				<nav class="slide-nav">
-					<div class="slide-nav__img slide-nav__img--prev" style="background-image:url(img/27.jpg);"></div>
-					<div class="slide-nav__img slide-nav__img--next" style="background-image:url(img/28.jpg);"></div>
+					<div class="slide-nav__img slide-nav__img--prev" style="background-image:url(img/hashtag_16.png);"></div>
+					<div class="slide-nav__img slide-nav__img--next" style="background-image:url(img/hashtag_18.png);"></div>
 				</nav>
 			</div>
 			<div class="content__item" id="item-18">
@@ -388,8 +388,8 @@
 				</p>
 				<a class="content__item-link oh"><span class="oh__inner">View more</span></a>
 				<nav class="slide-nav">
-					<div class="slide-nav__img slide-nav__img--prev" style="background-image:url(img/27.jpg);"></div>
-					<div class="slide-nav__img slide-nav__img--next" style="background-image:url(img/28.jpg);"></div>
+					<div class="slide-nav__img slide-nav__img--prev" style="background-image:url(img/hashtag_17.png);"></div>
+					<div class="slide-nav__img slide-nav__img--next" style="background-image:url(img/hashtag_19.png);"></div>
 				</nav>
 			</div>
 			<div class="content__item" id="item-19">
@@ -400,8 +400,8 @@
 				</p>
 				<a class="content__item-link oh"><span class="oh__inner">View more</span></a>
 				<nav class="slide-nav">
-					<div class="slide-nav__img slide-nav__img--prev" style="background-image:url(img/27.jpg);"></div>
-					<div class="slide-nav__img slide-nav__img--next" style="background-image:url(img/28.jpg);"></div>
+					<div class="slide-nav__img slide-nav__img--prev" style="background-image:url(img/hashtag_18.png);"></div>
+					<div class="slide-nav__img slide-nav__img--next" style="background-image:url(img/hashtag_20.png);"></div>
 				</nav>
 			</div>
 			<div class="content__item" id="item-20">
@@ -412,8 +412,8 @@
 				</p>
 				<a class="content__item-link oh"><span class="oh__inner">View more</span></a>
 				<nav class="slide-nav">
-					<div class="slide-nav__img slide-nav__img--prev" style="background-image:url(img/27.jpg);"></div>
-					<div class="slide-nav__img slide-nav__img--next" style="background-image:url(img/28.jpg);"></div>
+					<div class="slide-nav__img slide-nav__img--prev" style="background-image:url(img/hashtag_19.png);"></div>
+					<div class="slide-nav__img slide-nav__img--next" style="background-image:url(img/hashtag_1.png);"></div>
 				</nav>
 			</div>
 			<button class="back">
