--- a/src/index.html
+++ b/src/index.html
@@ -180,7 +180,8 @@
 				<span class="content__item-number oh"><span class="oh__inner">1</span></span>
 				<h2 class="content__item-heading oh"><span class="oh__inner">#シェアハウス5年目</span></h2>
 				<p class="content__item-text">
-					The instruments by which public opinion is organized and focused may be misused. But such organization and focusing are necessary to orderly life.
+					共同生活が得意です。
+					今まではアメリカ､中国､韓国､フランス､イギリス､フィンランド､メキシコ､リトアニア､日本出身の子とひとつ屋根の下に生活したことがあり､大体の人と仲良くなれます。
 				</p>
 				<a class="content__item-link oh"><span class="oh__inner">View more</span></a>
 				<nav class="slide-nav">
@@ -189,8 +190,8 @@
 				</nav>
 			</div>
 			<div class="content__item" id="item-2">
-				<span class="content__item-number oh"><span class="oh__inner">02</span></span>
-				<h2 class="content__item-heading oh"><span class="oh__inner">Invisible</span></h2>
+				<span class="content__item-number oh"><span class="oh__inner">2</span></span>
+				<h2 class="content__item-heading oh"><span class="oh__inner">#台湾出身</span></h2>
 				<p class="content__item-text">
 					As civilization has become more complex, and as the need for invisible government has been increas ingly demonstrated, the technical means have been invented and developed by which opinion may be regimented.
 				</p>
@@ -201,8 +202,8 @@
 				</nav>
 			</div>
 			<div class="content__item" id="item-3">
-				<span class="content__item-number oh"><span class="oh__inner">03</span></span>
-				<h2 class="content__item-heading oh"><span class="oh__inner">Expense</span></h2>
+				<span class="content__item-number oh"><span class="oh__inner">3</span></span>
+				<h2 class="content__item-heading oh"><span class="oh__inner">#日本語オタク</span></h2>
 				<p class="content__item-text">
 					The invisible government tends to be concentrated in the hands of the few because of the expense of manipulating the social machinery which controls the opinions and habits of the masses.
 				</p>
@@ -213,8 +214,8 @@
 				</nav>
 			</div>
 			<div class="content__item" id="item-4">
-				<span class="content__item-number oh"><span class="oh__inner">04</span></span>
-				<h2 class="content__item-heading oh"><span class="oh__inner">Mechanism</span></h2>
+				<span class="content__item-number oh"><span class="oh__inner">4</span></span>
+				<h2 class="content__item-heading oh"><span class="oh__inner">#日本語オタク</span></h2>
 				<p class="content__item-text">
 					No matter how sophisticated, how cynical the public may become about publicity methods, it must respond to the basic appeals, because it will always need food, crave amusement, long for beauty, respond to leadership.
 				</p>
@@ -225,8 +226,8 @@
 				</nav>
 			</div>
 			<div class="content__item" id="item-5">
-				<span class="content__item-number oh"><span class="oh__inner">05</span></span>
-				<h2 class="content__item-heading oh"><span class="oh__inner">Millions</span></h2>
+				<span class="content__item-number oh"><span class="oh__inner">5</span></span>
+				<h2 class="content__item-heading oh"><span class="oh__inner">#広告専攻</span></h2>
 				<p class="content__item-text">
 					This practice of creating circumstances and of creating pictures in the minds of millions of persons is very common. 
 				</p>
@@ -237,8 +238,8 @@
 				</nav>
 			</div>
 			<div class="content__item" id="item-6">
-				<span class="content__item-number oh"><span class="oh__inner">06</span></span>
-				<h2 class="content__item-heading oh"><span class="oh__inner">Continuous</span></h2>
+				<span class="content__item-number oh"><span class="oh__inner">6</span></span>
+				<h2 class="content__item-heading oh"><span class="oh__inner">#カメラ女子</span></h2>
 				<p class="content__item-text">
 					The important thing is that it is universal and continuous; and in its sum total it is regimenting the public mind every bit as much as an army regiments the bodies of its soldiers.
 				</p>
@@ -249,8 +250,8 @@
 				</nav>
 			</div>
 			<div class="content__item" id="item-7">
-				<span class="content__item-number oh"><span class="oh__inner">07</span></span>
-				<h2 class="content__item-heading oh"><span class="oh__inner">Irresistible</span></h2>
+				<span class="content__item-number oh"><span class="oh__inner">7</span></span>
+				<h2 class="content__item-heading oh"><span class="oh__inner">#毎日自炊</span></h2>
 				<p class="content__item-text">
 					When regimented, a group at times offers an irresistible pressure before which legislators, editors, and teachers are helpless.
 				</p>
@@ -261,8 +262,8 @@
 				</nav>
 			</div>
 			<div class="content__item" id="item-8">
-				<span class="content__item-number oh"><span class="oh__inner">08</span></span>
-				<h2 class="content__item-heading oh"><span class="oh__inner">Pressure</span></h2>
+				<span class="content__item-number oh"><span class="oh__inner">8</span></span>
+				<h2 class="content__item-heading oh"><span class="oh__inner">#典型的なB型</span></h2>
 				<p class="content__item-text">
 					A desire for a specific reform, however widespread, cannot be translated into action until it is made articulate, and until it has exerted sufficient pressure upon the proper law-making bodies.
 				</p>
@@ -273,8 +274,8 @@
 				</nav>
 			</div>
 			<div class="content__item" id="item-9">
-				<span class="content__item-number oh"><span class="oh__inner">09</span></span>
-				<h2 class="content__item-heading oh"><span class="oh__inner">Interests</span></h2>
+				<span class="content__item-number oh"><span class="oh__inner">9</span></span>
+				<h2 class="content__item-heading oh"><span class="oh__inner">#ヨーグルト妖怪</span></h2>
 				<p class="content__item-text">
 					In the active proselytizing minorities in whom selfish interests and public interests coincide lie the progress and development of America.
 				</p>
@@ -286,7 +287,7 @@
 			</div>
 			<div class="content__item" id="item-10">
 				<span class="content__item-number oh"><span class="oh__inner">10</span></span>
-				<h2 class="content__item-heading oh"><span class="oh__inner">Think</span></h2>
+				<h2 class="content__item-heading oh"><span class="oh__inner">#じっとしていられない</span></h2>
 				<p class="content__item-text">
 					Small groups of persons can, and do, make the rest of us think what they please about a given subject.
 				</p>
@@ -298,7 +299,7 @@
 			</div>
 			<div class="content__item" id="item-11">
 				<span class="content__item-number oh"><span class="oh__inner">11</span></span>
-				<h2 class="content__item-heading oh"><span class="oh__inner">Think</span></h2>
+				<h2 class="content__item-heading oh"><span class="oh__inner">#一人居酒屋</span></h2>
 				<p class="content__item-text">
 					Small groups of persons can, and do, make the rest of us think what they please about a given subject.
 				</p>
@@ -310,7 +311,7 @@
 			</div>
 			<div class="content__item" id="item-12">
 				<span class="content__item-number oh"><span class="oh__inner">12</span></span>
-				<h2 class="content__item-heading oh"><span class="oh__inner">Think</span></h2>
+				<h2 class="content__item-heading oh"><span class="oh__inner">#ENFJ</span></h2>
 				<p class="content__item-text">
 					Small groups of persons can, and do, make the rest of us think what they please about a given subject.
 				</p>
@@ -322,7 +323,7 @@
 			</div>
 			<div class="content__item" id="item-13">
 				<span class="content__item-number oh"><span class="oh__inner">13</span></span>
-				<h2 class="content__item-heading oh"><span class="oh__inner">Think</span></h2>
+				<h2 class="content__item-heading oh"><span class="oh__inner">#コピー本大好き</span></h2>
 				<p class="content__item-text">
 					Small groups of persons can, and do, make the rest of us think what they please about a given subject.
 				</p>
@@ -334,7 +335,7 @@
 			</div>
 			<div class="content__item" id="item-14">
 				<span class="content__item-number oh"><span class="oh__inner">14</span></span>
-				<h2 class="content__item-heading oh"><span class="oh__inner">Think</span></h2>
+				<h2 class="content__item-heading oh"><span class="oh__inner">#被写体にもなれる</span></h2>
 				<p class="content__item-text">
 					Small groups of persons can, and do, make the rest of us think what they please about a given subject.
 				</p>
@@ -346,7 +347,7 @@
 			</div>
 			<div class="content__item" id="item-15">
 				<span class="content__item-number oh"><span class="oh__inner">15</span></span>
-				<h2 class="content__item-heading oh"><span class="oh__inner">Think</span></h2>
+				<h2 class="content__item-heading oh"><span class="oh__inner">#気づいたら海へ</span></h2>
 				<p class="content__item-text">
 					Small groups of persons can, and do, make the rest of us think what they please about a given subject.
 				</p>
@@ -358,7 +359,7 @@
 			</div>
 			<div class="content__item" id="item-16">
 				<span class="content__item-number oh"><span class="oh__inner">16</span></span>
-				<h2 class="content__item-heading oh"><span class="oh__inner">Think</span></h2>
+				<h2 class="content__item-heading oh"><span class="oh__inner">#Apple愛用</span></h2>
 				<p class="content__item-text">
 					Small groups of persons can, and do, make the rest of us think what they please about a given subject.
 				</p>
@@ -370,7 +371,7 @@
 			</div>
 			<div class="content__item" id="item-17">
 				<span class="content__item-number oh"><span class="oh__inner">17</span></span>
-				<h2 class="content__item-heading oh"><span class="oh__inner">Think</span></h2>
+				<h2 class="content__item-heading oh"><span class="oh__inner">#イベントマニア</span></h2>
 				<p class="content__item-text">
 					Small groups of persons can, and do, make the rest of us think what they please about a given subject.
 				</p>
@@ -382,7 +383,7 @@
 			</div>
 			<div class="content__item" id="item-18">
 				<span class="content__item-number oh"><span class="oh__inner">18</span></span>
-				<h2 class="content__item-heading oh"><span class="oh__inner">Think</span></h2>
+				<h2 class="content__item-heading oh"><span class="oh__inner">#パックチ苦手</span></h2>
 				<p class="content__item-text">
 					Small groups of persons can, and do, make the rest of us think what they please about a given subject.
 				</p>
@@ -394,7 +395,7 @@
 			</div>
 			<div class="content__item" id="item-19">
 				<span class="content__item-number oh"><span class="oh__inner">19</span></span>
-				<h2 class="content__item-heading oh"><span class="oh__inner">Think</span></h2>
+				<h2 class="content__item-heading oh"><span class="oh__inner">#香りのある暮らし</span></h2>
 				<p class="content__item-text">
 					Small groups of persons can, and do, make the rest of us think what they please about a given subject.
 				</p>
@@ -406,7 +407,7 @@
 			</div>
 			<div class="content__item" id="item-20">
 				<span class="content__item-number oh"><span class="oh__inner">20</span></span>
-				<h2 class="content__item-heading oh"><span class="oh__inner">Think</span></h2>
+				<h2 class="content__item-heading oh"><span class="oh__inner">#ヨガ部員</span></h2>
 				<p class="content__item-text">
 					Small groups of persons can, and do, make the rest of us think what they please about a given subject.
 				</p>
